[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/4_News.gd" type="Script" id=1]
[ext_resource path="res://fonts/Chunkfive Ex.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://styles/eventbox.tres" type="StyleBox" id=3]
[ext_resource path="res://images/event_icon.png" type="Texture" id=4]
[ext_resource path="res://images/price_low_icon.png" type="Texture" id=5]
[ext_resource path="res://images/weather_cloud_icon.png" type="Texture" id=6]
[ext_resource path="res://images/visitor_high_icon.png" type="Texture" id=7]
[ext_resource path="res://images/visitor_low_icon.png" type="Texture" id=8]
[ext_resource path="res://images/price_moderate_icon.png" type="Texture" id=9]
[ext_resource path="res://images/weather_rain_icon.png" type="Texture" id=10]
[ext_resource path="res://images/visitor_moderate_icon.png" type="Texture" id=11]
[ext_resource path="res://images/weather_sunny_icon.png" type="Texture" id=12]
[ext_resource path="res://images/price_high_icon.png" type="Texture" id=13]
[ext_resource path="res://images/cat_sprite2.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.901961 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D3" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( 954, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Popup" type="Panel" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 912.0
margin_bottom = 450.0
rect_min_size = Vector2( 800, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="HBoxContainer/Popup"]
margin_top = 32.0
margin_right = 800.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Oahu News Today"
align = 1
autowrap = true

[node name="Directions" type="Panel" parent="HBoxContainer/Popup"]
margin_left = 50.0
margin_top = 78.0
margin_right = 750.0
margin_bottom = 130.0
rect_min_size = Vector2( 400, 50 )
rect_clip_content = true
size_flags_horizontal = 7
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="DIRECTIONS" type="Label" parent="HBoxContainer/Popup/Directions"]
margin_left = 60.0
margin_top = 12.0
margin_right = 639.0
margin_bottom = 43.0
text = "Based on Today's News, maximize your profit by picking the best location to sell and by purchasing the right amount of inventory."
align = 1
valign = 1
autowrap = true

[node name="Events" type="Panel" parent="HBoxContainer/Popup"]
margin_left = 51.0
margin_top = 148.0
margin_right = 750.0
margin_bottom = 257.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 7
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="EventIcon" type="Sprite" parent="HBoxContainer/Popup/Events"]
position = Vector2( 72, 44 )
texture = ExtResource( 4 )

[node name="EVENTS" type="Label" parent="HBoxContainer/Popup/Events"]
anchor_top = -0.366972
anchor_bottom = -0.366972
margin_left = 48.0
margin_top = 124.0
margin_right = 94.0
margin_bottom = 138.0
text = "EVENTS"

[node name="EventInfo" type="Label" parent="HBoxContainer/Popup/Events"]
anchor_left = -0.0472103
anchor_top = -0.376147
anchor_right = -0.0472103
anchor_bottom = -0.376147
margin_left = 141.0
margin_top = 62.0
margin_right = 255.0
margin_bottom = 86.0
text = "Event Information"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EventInfo2" type="Label" parent="HBoxContainer/Popup/Events"]
anchor_left = 0.527897
anchor_top = -0.417291
anchor_right = 0.610873
anchor_bottom = -0.0411445
margin_left = 141.0
margin_top = 62.0
margin_right = 255.0
margin_bottom = 86.0
text = "Average Visitors:      20-30 
Not Counting Tourists
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EventDesc" type="Label" parent="HBoxContainer/Popup/Events"]
anchor_left = -0.0228898
anchor_top = -0.137615
anchor_right = 0.336195
anchor_bottom = 0.0366972
margin_left = 141.0
margin_top = 62.0
margin_right = 255.0
margin_bottom = 86.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Popup"]
margin_left = 50.0
margin_top = 275.0
margin_right = 750.0
margin_bottom = 425.0
custom_constants/separation = 25

[node name="Weather" type="Panel" parent="HBoxContainer/Popup/HBoxContainer"]
margin_right = 216.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="WEATHER" type="Label" parent="HBoxContainer/Popup/HBoxContainer/Weather"]
margin_top = 21.0
margin_right = 216.0
margin_bottom = 35.0
text = "WEATHER"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/Popup/HBoxContainer/Weather"]
position = Vector2( 108, 70 )
frames = SubResource( 3 )

[node name="CurrentWeather" type="Label" parent="HBoxContainer/Popup/HBoxContainer/Weather"]
margin_top = 113.0
margin_right = 216.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Current Weather"
align = 1
valign = 1

[node name="Visitor" type="Panel" parent="HBoxContainer/Popup/HBoxContainer"]
margin_left = 241.0
margin_right = 458.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="VISITORS" type="Label" parent="HBoxContainer/Popup/HBoxContainer/Visitor"]
margin_top = 21.0
margin_right = 216.0
margin_bottom = 35.0
text = "TOURISTS"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/Popup/HBoxContainer/Visitor"]
position = Vector2( 108, 70 )
frames = SubResource( 4 )

[node name="CurrentVisitors" type="Label" parent="HBoxContainer/Popup/HBoxContainer/Visitor"]
margin_top = 113.0
margin_right = 216.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Current Tourists"
align = 1
valign = 1

[node name="FishPrice" type="Panel" parent="HBoxContainer/Popup/HBoxContainer"]
margin_left = 483.0
margin_right = 700.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="FISHPRICE" type="Label" parent="HBoxContainer/Popup/HBoxContainer/FishPrice"]
margin_top = 21.0
margin_right = 216.0
margin_bottom = 35.0
text = "FISH PRICE"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/Popup/HBoxContainer/FishPrice"]
position = Vector2( 108, 70 )
frames = SubResource( 5 )

[node name="CurrentPrice" type="Label" parent="HBoxContainer/Popup/HBoxContainer/FishPrice"]
margin_top = 113.0
margin_right = 216.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Current Price"
align = 1
valign = 1

[node name="Button" type="Button" parent="HBoxContainer/Popup"]
margin_left = 740.0
margin_top = 17.0
margin_right = 783.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="HBoxContainer/Popup/Button"]
margin_right = 40.0
margin_bottom = 40.0
text = "X"
align = 1
valign = 1

[node name="Head" type="Polygon2D" parent="HBoxContainer"]
position = Vector2( 763, 160.515 )
scale = Vector2( 0.171318, 0.171318 )
texture = ExtResource( 14 )
skeleton = NodePath("../Skeleton2D")
polygon = PoolVector2Array( 130.167, 26.5, 137.667, 8.66667, 149.667, 21.5, 168.167, 19.6667, 186.833, 22.5, 202, 9.5, 208.5, 23.1667, 214.333, 42.8333, 215.167, 65.3333, 211.5, 83.8333, 198.333, 98.1667, 182.333, 107.167, 168.667, 108.667, 153.333, 105.167, 135.833, 92.3333, 128.167, 81.8333, 125.667, 63, 126.5, 40.3333, 167.507, 40.3298, 167.357, 58.4708, 167.507, 75.7121, 167.207, 95.2024 )
uv = PoolVector2Array( 130.167, 26.5, 137.667, 8.66667, 149.667, 21.5, 168.167, 19.6667, 186.833, 22.5, 202, 9.5, 208.5, 23.1667, 214.333, 42.8333, 215.167, 65.3333, 211.5, 83.8333, 198.333, 98.1667, 182.333, 107.167, 168.667, 108.667, 153.333, 105.167, 135.833, 92.3333, 128.167, 81.8333, 125.667, 63, 126.5, 40.3333, 167.507, 40.3298, 167.357, 58.4708, 167.507, 75.7121, 167.207, 95.2024 )
polygons = [ PoolIntArray( 0, 2, 1 ), PoolIntArray( 4, 6, 5 ), PoolIntArray( 17, 18, 2, 0 ), PoolIntArray( 2, 3, 18 ), PoolIntArray( 3, 4, 18 ), PoolIntArray( 18, 7, 6, 4 ), PoolIntArray( 16, 19, 18, 17 ), PoolIntArray( 19, 8, 7, 18 ), PoolIntArray( 15, 20, 19, 16 ), PoolIntArray( 20, 9, 8, 19 ), PoolIntArray( 14, 21, 20, 15 ), PoolIntArray( 13, 12, 21, 14 ), PoolIntArray( 12, 11, 10, 21 ), PoolIntArray( 21, 10, 9, 20 ) ]
bones = [ "hip", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/spine", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/spine/upperchest", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/spine/upperchest/head", PoolRealArray( 0.31, 0, 0.31, 1, 0.31, 0, 0.42, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "hip/spine/upperchest/head/earR", PoolRealArray( 0, 0, 0, 0, 0, 1, 0.29, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/spine/upperchest/head/earL", PoolRealArray( 0.13, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/tail", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/tail/tail2", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/tail/tail2/tail3", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/tail/tail2/tail3/tail4", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ) ]
internal_vertex_count = 4

[connection signal="pressed" from="HBoxContainer/Popup/Button" to="." method="_on_Button_pressed"]
